globus-xio (5.4-1+gt6.@distro@) @distro@; urgency=low

  * Better fix for testing on localhost

 -- Globus Toolkit <support@globus.org>  Fri, 09 Jan 2015 08:33:44 -0500

globus-xio (5.3-1+gt6.@distro@) @distro@; urgency=low

  * Fix TAP output of test

 -- Globus Toolkit <support@globus.org>  Tue, 06 Jan 2015 12:49:57 -0500

globus-xio (5.2-1+gt6.@distro@) @distro@; urgency=low

  * Fix hang in tests on cygwin

 -- Globus Toolkit <support@globus.org>  Mon, 22 Dec 2014 15:34:19 -0500

globus-xio (5.1-1+gt6.@distro@) @distro@; urgency=low

  * Fix hang in tests on cygwin

 -- Globus Toolkit <support@globus.org>  Mon, 22 Dec 2014 13:12:09 -0500

globus-xio (5.0-1+gt6.@distro@) @distro@; urgency=low

  * Add net_manager support

 -- Globus Toolkit <support@globus.org>  Thu, 18 Dec 2014 07:50:23 -0500

globus-xio (4.17-1+gt6.@distro@) @distro@; urgency=low

  * doxygen fixes

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:11:37 -0500

globus-xio (4.16-1+gt6.@distro@) @distro@; urgency=low

  * Use localhost for tests

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 10:00:45 -0500

globus-xio (4.15-2+gt6.@distro@) @distro@; urgency=low

  * Add build dependency on libltdl-dev for tests

 -- Globus Toolkit <support@globus.org>  Thu, 23 Oct 2014 13:04:07 -0400

globus-xio (4.15-1+gt6.@distro@) @distro@; urgency=low

  * Use consistent PREDEFINED in all Doxyfiles
  * Doxygen markup fixes
  * Fix typos and clarify some documentation
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Thu, 25 Sep 2014 15:08:08 -0400

globus-xio (4.14-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-xio (4.13-2+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-xio (4.13-1+gt6.@distro@) @distro@; urgency=low
