@@ -1,3 +1,9 @@
+globus-xio (5.5-1+gt6.@distro@) @distro@; urgency=low
+
+  * GT-581: Prefer IPV6 address family when creating a listener on all interfaces
+
+ -- Globus Toolkit <support@globus.org>  Mon, 09 Feb 2015 15:46:08 -0600
+
 globus-xio (5.4-1+gt6.@distro@) @distro@; urgency=low
 
   * Better fix for testing on localhost
